--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
 		img{
 			max-width: 100%;
 		}
+		.responsivo{
+			display: none
+		}
+		@media all and (max-width: 768px) {
+			img{
+				display: none;
+			}
+			.responsivo{
+				display: block;
+			}
+		}
+
 	</style>
 </head>
 <body>
 	<img src="header.jpg" alt="">
 	<img src="hero.jpg" alt="">
 	<img src="acustica.jpg" alt="">
+	<img src="invie-responsive.png" alt="" class="responsivo">
 </body>
 </html>
